Add fish databse

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANIMAL CROSSING</title>
 
-    <link rel="stylesheet" href="static/plugin/bootstrap-4.4.1-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="static/plugin/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/main.css">
 
-    <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.js"></script>
     <script src="static/plugin/pouchdb-7.1.1.min.js"></script>
+    <script src="static/plugin/jquery-3.4.1.min.js"></script>
+    <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <div class="container">
 
     </div>
+
+    <!-- scripts -->
+    <script src="static/js/tsv-src.js"></script>
+    <script src="static/js/lib.js"></script>
+    <script src="static/js/enum.js"></script>
+
+    <script src="static/js/db.js"></script>
+
+    <script src="static/js/main.js"></script>
 </body>
 
 </html>
