add kind and month selector

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,33 @@
 
 <body>
     <div class="container">
+        <div class="m-1">
+            <div class="kind">
+                <ul class="nav nav-pills" id="pills-kind" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="kind-tab-fish" data-toggle="pill" href="#" role="tab"
+                            data-type="fish" aria-controls="fish" aria-selected="true">魚類</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="kind-tab-bug" data-toggle="pill" href="#" role="tab" aria-controls="bug"
+                            data-type="bug" aria-selected="false">昆蟲</a>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="m-1"></div>
+
+            <div class="month">
+                <ul class="nav nav-pills" id="pills-month" role="tablist">
+                </ul>
+            </div>
+        </div>
     </div>
 
     <!-- scripts -->
-    <script src="static/js/tsv-src.js"></script>
-    <script src="static/js/lib.js"></script>
+    <!-- <script src="static/js/tsv-src.js"></script> -->
+    <!-- <script src="static/js/tools.js"></script> -->
+
     <script src="static/js/enum.js"></script>
 
     <script src="static/js/db.js"></script>
