--- a/src/index.html
+++ b/src/index.html
@@ -7,43 +7,46 @@
     <title>ANIMAL CROSSING</title>
 
     <link rel="stylesheet" href="static/plugin/bootstrap-4.4.1-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/plugin/DataTables/datatables.css" />
+
     <link rel="stylesheet" href="static/css/main.css">
 
     <script src="static/plugin/pouchdb-7.1.1.min.js"></script>
     <script src="static/plugin/jquery-3.4.1.min.js"></script>
     <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="static/plugin/DataTables/datatables.min.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="m-1">
-            <div class="kind">
-                <ul class="nav nav-pills" id="pills-kind" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="kind-tab-fish" data-toggle="pill" href="#" role="tab"
-                            data-type="fish" aria-controls="fish" aria-selected="true">魚類</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="kind-tab-bug" data-toggle="pill" href="#" role="tab" aria-controls="bug"
-                            data-type="bug" aria-selected="false">昆蟲</a>
-                    </li>
-                </ul>
+    <div class="container-fluid">
+        <div class="m-4">
+            <!-- kind -->
+            <div id="kinds">
+                <ul class="nav nav-pills" id="pills-kind" role="tablist"></ul>
             </div>
 
-            <div class="m-1"></div>
+            <div class="m-2"></div>
 
-            <div class="month">
-                <ul class="nav nav-pills" id="pills-month" role="tablist">
-                </ul>
+            <!-- month -->
+            <div id="months">
+                <ul class="nav nav-pills" id="pills-month" role="tablist"></ul>
+            </div>
+
+            <hr />
+
+            <!-- items -->
+            <div id="items">
+                <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
             </div>
         </div>
     </div>
 
     <!-- scripts -->
+    <script src="static/js/enum.js"></script>
+    <script src="static/js/utils.js"></script>
+
     <!-- <script src="static/js/tsv-src.js"></script> -->
     <!-- <script src="static/js/tools.js"></script> -->
-
-    <script src="static/js/enum.js"></script>
 
     <script src="static/js/db.js"></script>
 
