--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
 
     <link rel="stylesheet" href="static/css/main.css">
 
-    <script src="static/plugin/pouchdb-7.1.1.min.js"></script>
-    <script src="static/plugin/jquery-3.4.1.min.js"></script>
-    <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="static/plugin/DataTables/datatables.min.js"></script>
+    <script type="text/javascript" src="static/plugin/pouchdb-7.1.1.min.js"></script>
+    <script type="text/javascript" src="static/plugin/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="static/plugin/DataTables/datatables.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 
 <body>
