--- a/src/index.html
+++ b/src/index.html
@@ -6,31 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANIMAL CROSSING</title>
 
+    <link rel="stylesheet" href="static/plugin/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="static/plugin/bootstrap-4.4.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/plugin/DataTables/datatables.css" />
+    <link rel="stylesheet" href="static/plugin/DataTables/datatables.min.css" />
+    <link rel="stylesheet" href="static/plugin/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" />
 
     <link rel="stylesheet" href="static/css/main.css">
 
+    <script type="text/javascript" src="static/plugin/fontawesome/js/all.min.js"></script>
+    <script type="text/javascript" src="static/plugin/moment.min.js"></script>
     <script type="text/javascript" src="static/plugin/pouchdb-7.1.1.min.js"></script>
     <script type="text/javascript" src="static/plugin/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="static/plugin/DataTables/datatables.min.js"></script>
+    <script type="text/javascript"
+        src="static/plugin/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="m-4">
-            <!-- kind -->
-            <div id="kinds">
-                <ul class="nav nav-pills" id="pills-kind" role="tablist"></ul>
-            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <!-- kind -->
+                    <div class="row mb-2" id="kinds">
+                        <ul class="nav nav-pills" id="pills-kind" role="tablist"></ul>
+                    </div>
 
-            <div class="m-2"></div>
+                    <!-- month -->
+                    <div class="row mb-2" id="months">
+                        <div class="justify-content-center align-middle text-center">
+                            <ul class="nav nav-pills" id="pills-month" role="tablist"></ul>
+                        </div>
+                    </div>
 
-            <!-- month -->
-            <div id="months">
-                <ul class="nav nav-pills" id="pills-month" role="tablist"></ul>
+                    <!-- time -->
+                    <div class="row" id="timePicker">
+                        <div class="row col-12 mb-1">
+                            <div class="col-6">
+                                <div id="currentTime"></div>
+                            </div>
+                        </div>
+                        <div class="row col-6">
+                            <input id="timeDisplay" type="text" class="form-control" disabled/>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <hr />
