Update the theme

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="static/plugin/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" />
 
     <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/custom-bs4.css">
 
     <script src="static/plugin/fontawesome/js/all.min.js"></script>
 
