--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
     <div class="container-fluid">
         <div class="m-4">
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
                     <!-- kind -->
                     <div class="row mb-2" id="kinds">
-                        <div class="col-4"></div>
                         <div class="col justify-content-center align-middle text-center">
                             <ul class="nav nav-pills" id="pills-kind" role="tablist"></ul>
                         </div>
@@ -44,7 +43,6 @@
 
                     <!-- month -->
                     <div class="row mb-2" id="months">
-                        <div class="col-4"></div>
                         <div class="col justify-content-center align-middle text-center">
                             <ul class="nav nav-pills" id="pills-month" role="tablist"></ul>
                         </div>
@@ -52,7 +50,6 @@
 
                     <!-- hemisphere -->
                     <div class="row mb-2" id="hemispheres">
-                        <div class="col-4"></div>
                         <div class="col justify-content-center align-middle text-center">
                             <ul class="nav nav-pills" id="pills-hemisphere" role="tablist"></ul>
                         </div>
@@ -61,27 +58,55 @@
                     <!-- time -->
                     <div id="timePicker">
                         <div class="row mb-1">
-                            <div class="col"></div>
-                            <div class="col" id="currentTime"></div>
-                            <div class="col"></div>
+                            <div class="col-8" id="currentTime"></div>
                         </div>
                         <div class="row">
-                            <div class="col"></div>
-                            <div class="col">
+                            <div class="col-8">
                                 <input id="timeDisplay" type="text" class="form-control" disabled />
                             </div>
-                            <div class="col"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6">
+                    <!-- information -->
+                    <div class="row h-75">
+                        <div class="col" id="information">
+                            information
                         </div>
                     </div>
 
+                    <hr />
+
+                    <!-- filter -->
+                    <div class="row h-25">
+                        <div class="col" id="filterValid">
+                            <div class="col justify-content-center align-middle text-center">
+                                <ul class="nav nav-pills" id="pills-filter" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="pills-filter-all-tab" data-toggle="pill" href="#"
+                                            data-type="1" , role="tab" aria-controls="pills-filter-all"
+                                            aria-selected="false">全部</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" id="pills-filter-valid-tab" data-toggle="pill" href="#"
+                                            data-type="2" role="tab" aria-controls="pills-filter-valid"
+                                            aria-selected="false">可獲得</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <hr />
 
             <!-- items -->
-            <div id="items">
-                <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
+            <div class="row">
+                <div class="col-12" id="items">
+                    <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
+                </div>
             </div>
         </div>
     </div>
