fixed the logic of redraw

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <!-- time -->
                     <div id="timePicker">
                         <div class="row mb-1">
-                            <div class="col-8" id="currentTime"></div>
+                            <div class="col-10" id="currentTime"></div>
                         </div>
                         <div class="row">
                             <div class="col-8">
@@ -80,7 +80,7 @@
 
                     <!-- filter -->
                     <div class="row h-25">
-                        <div class="col" id="filterValid">
+                        <div class="col" id="filterMonthValid">
                             <div class="col justify-content-center align-middle text-center">
                                 <ul class="nav nav-pills" id="pills-filter" role="tablist">
                                     <li class="nav-item">
@@ -91,7 +91,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" id="pills-filter-valid-tab" data-toggle="pill" href="#"
                                             data-type="2" role="tab" aria-controls="pills-filter-valid"
-                                            aria-selected="false">可獲得</a>
+                                            aria-selected="false">當月可獲得</a>
                                     </li>
                                 </ul>
                             </div>
