updated the information

--- a/index.html
+++ b/index.html
@@ -71,8 +71,13 @@
                 <div class="col-6">
                     <!-- information -->
                     <div class="row h-75">
-                        <div class="col" id="information">
-                            information
+                        <div class="row h-50 col-12 overflow-auto m-1">
+                            <div class="col-12 mb-2">下個月消失</div>
+                            <div class="col" id="disappearNextMonth"></div>
+                        </div>
+                        <div class="row h-50 col-12 overflow-auto m-1">
+                            <div class="col-12 mb-2">下個月出現</div>
+                            <div class="col-12" id="appearNextMonth"></div>
                         </div>
                     </div>
 
