--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <div class="container-fluid">
         <div class="m-4">
-            <div class="row">
+            <div class="row top-block">
                 <div class="col-6">
                     <!-- kind -->
                     <div class="row mb-2" id="kinds">
@@ -68,23 +68,9 @@
                     </div>
                 </div>
 
-                <div class="col-6">
-                    <!-- information -->
-                    <div class="row h-75">
-                        <div class="row h-50 col-12 overflow-auto m-1">
-                            <div class="col-12 mb-2">下個月消失</div>
-                            <div class="col" id="disappearNextMonth"></div>
-                        </div>
-                        <div class="row h-50 col-12 overflow-auto m-1">
-                            <div class="col-12 mb-2">下個月出現</div>
-                            <div class="col-12" id="appearNextMonth"></div>
-                        </div>
-                    </div>
-
-                    <hr />
-
+                <div class="col-6 top-right">
                     <!-- filter -->
-                    <div class="row h-25">
+                    <div class="row">
                         <div class="col" id="filterMonthValid">
                             <div class="col justify-content-center align-middle text-center">
                                 <ul class="nav nav-pills" id="pills-filter" role="tablist">
@@ -102,18 +88,39 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <hr />
-
-            <!-- items -->
-            <div class="row">
-                <div class="col-12" id="items">
-                    <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
+                    <hr>
+                    <!-- information -->
+                    <div class="col-12 overflow-auto">
+                        <div class="row m-1">
+                            <div class="row col-12 mb-2">
+                                <span class="h5">下個月消失</span>
+                            </div>
+                            <div class="col">
+                                <div class="float-left" id="nextDisappear"></div>
+                            </div>
+                        </div>
+                        <div class="row m-1">
+                            <div class="row col-12 mb-2">
+                                <span class="h5">下個月出現</span>
+                            </div>
+                            <div class="col-12">
+                                <div class="float-left" id="nextAppear"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <hr />
+
+        <!-- items -->
+        <div class="row">
+            <div class="col-12" id="items">
+                <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!-- scripts -->
