updated the operation

--- a/indexGrid.html
+++ b/indexGrid.html
@@ -26,8 +26,6 @@
     <script src="static/plugin/jquery-3.4.1.min.js"></script>
     <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/plugin/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- <script src="static/plugin/DataTables/datatables.min.js"></script> -->
 </head>
 
 <body>
@@ -117,10 +115,9 @@
 
         <!-- items -->
         <div class="row">
-            <div class="col-12">
-                <div class="row justify-content-center align-items-center">
-                    <div class="col-12">
-                        <div id="itemRoot" class="d-flex flex-wrap"></div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-12">
+                    <div id="itemRoot" class="d-flex flex-wrap justify-content-center align-items-center">
                     </div>
                 </div>
             </div>
@@ -137,6 +134,7 @@
     </template>
 
     <!-- scripts -->
+    <script src="static/js/text.js"></script>
     <script src="static/js/enum.js"></script>
     <script src="static/js/util-grid.js"></script>
 
