--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="static/plugin/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css" />
 
     <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/item.css">
     <link rel="stylesheet" href="static/css/custom-bs4.css">
+
+    <script src="static/plugin/axios/axios.min.js"></script>
 
     <script src="static/plugin/fontawesome/js/all.min.js"></script>
 
@@ -23,10 +26,6 @@
     <script src="static/plugin/jquery-3.4.1.min.js"></script>
     <script src="static/plugin/bootstrap-4.4.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="static/plugin/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <script src="static/plugin/DataTables/datatables.min.js"></script>
-
-    <script src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 
 <body>
@@ -116,14 +115,45 @@
 
         <!-- items -->
         <div class="row">
-            <div class="col-12" id="items">
-                <table class="table table-striped table-bordered" id="dataTable" width="100%"></table>
+            <div class="row justify-content-center align-items-center">
+                <div class="col-12">
+                    <div id="itemRoot" class="d-flex flex-wrap justify-content-center align-items-center">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    </div>
+
+    <!-- template -->
+    <template id="gridItem">
+        <div class="item-body">
+            <span id="title" class="item-title h6"></span>
+            <img id="icon" class="item-icon" src="">
+            <div id="info"></div>
+        </div>
+    </template>
+
+    <template id="cardItem">
+        <div id="itemData" class="card border-success item-card">
+            <div class="card-header">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img id="icon" class="card-img" src="" alt="" />
+                    </div>
+                    <div class="col-md-8">
+                        <h5 id=title class="card-title text-center"></h5>
+                        <h6 id=subTitle class="card-subtitle text-center text-muted"></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <ul id="info" class="list-group list-group-flush"></ul>
+            </div>
+        </div>
+    </template>
 
     <!-- scripts -->
+    <script src="static/js/text.js"></script>
     <script src="static/js/enum.js"></script>
     <script src="static/js/utils.js"></script>
 
