--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <!-- items -->
         <div class="row">
-            <div class="row justify-content-center align-items-center">
+            <div class="justify-content-center align-items-center">
                 <div class="col-12">
                     <div id="itemRoot" class="d-flex flex-wrap justify-content-center align-items-center">
                     </div>
