Improvement the style of card

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="justify-content-center align-items-center">
                 <div class="col-12">
-                    <div id="itemRoot" class="d-flex flex-wrap justify-content-center align-items-center">
+                    <div id="cardContainer" class="d-flex flex-wrap justify-content-center align-items-center">
                     </div>
                 </div>
             </div>
@@ -133,8 +133,8 @@
         </div>
     </template>
 
-    <template id="cardItem">
-        <div id="itemData" class="card border-success item-card">
+    <template id="itemCardTemplate">
+        <div id="itemCard" name="itemCard" class="card border-success item-card">
             <div class="card-header">
                 <div class="row no-gutters">
                     <div class="col-md-4">
