updated the information of hours

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
             <div class="card-body">
                 <ul id="info" class="list-group list-group-flush"></ul>
             </div>
+            <div class="card-footer">
+                <div id="moreInfo"></div>
+            </div>
         </div>
     </template>
 
